// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlight passed results with --highlight-less flag 1`] = `
"  
  [1mok[22m
  Size limit: [32m[1m102.4 kB[22m[39m
  Size:       [32m[1m102.4 kB[22m[39m [90mgzipped[39m
  
  [1mgood[22m
  Size limit: [32m[1m102.4 kB[22m[39m
  Size:       [32m[1m97.28 kB[22m[39m [90mgzipped[39m
  
  [1mfail[22m
  [31mPackage size limit has exceeded by 1 B[39m
  Size limit: [31m[1m102400 B[22m[39m
  Size:       [31m[1m102401 B[22m[39m [90mgzipped[39m
  
  [33mTry to reduce size or increase limit in [1m\\"size-limit\\"[22m section of [1mpackage.json[22m[39m
"
`;

exports[`only renders failed results with --hide-passed flag 1`] = `
"  
  [1msmall fail[22m
  [31mPackage size limit has exceeded by 1 B[39m
  Size limit: [31m[1m102400 B[22m[39m
  Size:       [31m[1m102401 B[22m[39m [90mgzipped[39m
  
  [1mbig fail[22m
  [31mPackage size limit has exceeded by 100 B[39m
  Size limit: [31m[1m102.4 kB[22m[39m
  Size:       [31m[1m102.5 kB[22m[39m [90mgzipped[39m
  
  [33mTry to reduce size or increase limit in [1m\\"size-limit\\"[22m section of [1mpackage.json[22m[39m
"
`;

exports[`renders JSON results 1`] = `
"[
  {
    \\"name\\": \\"big fail\\"
  },
  {
    \\"name\\": \\"big fail\\",
    \\"passed\\": false,
    \\"size\\": 1000,
    \\"running\\": 0.3,
    \\"loading\\": 0.2
  }
]
"
`;

exports[`renders Webpack stats help message 1`] = `
"  
  Webpack Stats file was saved to test/stats.json
  You can review it using https://webpack.github.io/analyse
"
`;

exports[`renders config-less result 1`] = `
"  
  [31mTotal time limit has exceeded[39m
  Time limit:   [31m[1m500 ms[22m[39m
  Size:         [31m[1m1 kB[22m[39m
  Loading time: [31m[1m200 ms[22m[39m [90mon slow 3G[39m
  Running time: [31m[1m300 ms[22m[39m [90mon Snapdragon 410[39m
  Total time:   [31m[1m500 ms[22m[39m
  
  [33mTry to reduce size or increase limit[39m
"
`;

exports[`renders failed results 1`] = `
"  
  [1mok[22m
  Size limit: [32m[1m102.4 kB[22m[39m
  Size:       [32m[1m102.4 kB[22m[39m [90mgzipped[39m
  
  [1msmall fail[22m
  [31mPackage size limit has exceeded by 1 B[39m
  Size limit: [31m[1m102400 B[22m[39m
  Size:       [31m[1m102401 B[22m[39m [90mgzipped[39m
  
  [1mbig fail[22m
  [31mPackage size limit has exceeded by 100 B[39m
  Size limit: [31m[1m102.4 kB[22m[39m
  Size:       [31m[1m102.5 kB[22m[39m [90mgzipped[39m
  
  [33mTry to reduce size or increase limit in [1m\\"size-limit\\"[22m section of [1mpackage.json[22m[39m
"
`;

exports[`renders list of failed and success checks in silent mode 1`] = `
"  
  [1msmall fail[22m
  [31mPackage size limit has exceeded by 1 B[39m
  Size limit: [31m[1m102400 B[22m[39m
  Size:       [31m[1m102401 B[22m[39m [90mwith all dependencies, minified and gzipped[39m
  
  [1mbig fail[22m
  [31mPackage size limit has exceeded by 100 B[39m
  Size limit: [31m[1m102.4 kB[22m[39m
  Size:       [31m[1m102.5 kB[22m[39m [90mwith all dependencies, minified and gzipped[39m
  
"
`;

exports[`renders list of failed checks in silent mode 1`] = `
"  
  [1msmall fail[22m
  [31mPackage size limit has exceeded by 1 B[39m
  Size limit: [31m[1m102400 B[22m[39m
  Size:       [31m[1m102401 B[22m[39m [90mwith all dependencies, minified and gzipped[39m
  
  [1mbig fail[22m
  [31mPackage size limit has exceeded by 100 B[39m
  Size limit: [31m[1m102.4 kB[22m[39m
  Size:       [31m[1m102.5 kB[22m[39m [90mwith all dependencies, minified and gzipped[39m
  
"
`;

exports[`renders list of success checks in silent mode 1`] = `
"  
"
`;

exports[`renders result for file without gzip 1`] = `
"  
  Size limit: [32m[1m99 B[22m[39m
  Size:       [32m[1m100 B[22m[39m
  
"
`;

exports[`renders results 1`] = `
"  
  [1mlimitless[22m
  Size:         [1m10 B  [22m [90mwith given webpack configuration[39m
  Loading time: [1m100 ms[22m [90mon slow 3G[39m
  Running time: [1m500 ms[22m [90mon Snapdragon 410[39m
  Total time:   [1m600 ms[22m
  
  [1msize[22m
  Size limit:   [32m[1m102.4 kB[22m[39m
  Size:         [32m[1m102.4 kB[22m[39m [90mwith all dependencies, minified and gzipped[39m
  Loading time: [32m[1m1 s     [22m[39m [90mon slow 3G[39m
  Running time: [32m[1m2 s     [22m[39m [90mon Snapdragon 410[39m
  Total time:   [32m[1m3 s[22m[39m
  
  [1mtime[22m
  Time limit:   [32m[1m4 s[22m[39m
  Size:         [32m[1m102.4 kB[22m[39m [90mwith all dependencies and minified[39m
  Loading time: [32m[1m1 s     [22m[39m [90mon slow 3G[39m
  Running time: [32m[1m2 s     [22m[39m [90mon Snapdragon 410[39m
  Total time:   [32m[1m3 s[22m[39m
  
"
`;

exports[`renders single result 1`] = `
"  
  [31mPackage size limit has exceeded by 1 B[39m
  Size limit: [31m[1m100 B[22m[39m
  Size:       [31m[1m101 B[22m[39m [90mgzipped[39m
  
  [33mTry to reduce size or increase limit at [1m.size-limit.json[22m[39m
"
`;
